# fun_model

./: .env  .env.example  .gitignore  ARCHITECTURE.md  README.md  check_chat.py  check_models.py  file.py  guide.txt  local.py  pyproject.toml  requirements.txt  run.py  setup_project.py  test_httpx_url.py
app/: __init__.py  auth.py  routes.py
app/static/: auth.js  style.css
app/templates/: index.html
config/: agents.yaml  openrouter.yaml  smtp.yaml  supabase.yaml
infra/: Dockerfile  docker-compose.yml
orchestrator/: __init__.py  config.py  graph.py  llm_client.py  orchestrator.py
orchestrator/agents/: __init__.py  base_agent.py  ceo_agent.py  coder_agent.py  docs_agent.py  pm_agent.py  qa_agent.py  research_agent.py
orchestrator/prompts/: ceo_prompt.txt  coder_prompt.txt  docs_prompt.txt  pm_prompt.txt  qa_prompt.txt  research_prompt.txt
orchestrator/tools/: __init__.py  memory.py  notifier.py  sandbox_runner.py
storage/: mock_db.json
storage/data/: local.db
storage/logs/: app_20251211.jsonl  app_20251212.jsonl  app_20251213.jsonl  app_20251214.jsonl  app_20251215.jsonl  app_20251217.jsonl  app_20251218.jsonl  app_20251219.jsonl  app_20251220.jsonl  app_20251221.jsonl  app_20251226.jsonl
tests/: integration_test.py
