[project]
name = "fun-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=3.0.0",
    "apscheduler==3.10.4",
    "bcrypt==4.2.0",
    "black>=23.11.0",
    "cryptography==43.0.1",
    "docker==7.1.0",
    "flask==3.0.3",
    "flask-cors>=4.0.0",
    "google-adk==0.1.0",
    "gunicorn==22.0.0",
    "httpx>=0.28.1",
    "isort>=5.12.0",
    "jsonschema>=4.20.0",
    "loguru==0.7.2",
    "mypy==1.11.2",
    "orjson==3.10.7",
    "pydantic==2.8.2",
    "pytest==8.3.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "pyyaml>=6.0.0",
    "requests==2.32.3",
    "rich==13.8.1",
    "ruff==0.6.3",
    "structlog>=23.2.0",
    "supabase>=2.7.0",
    "tenacity>=8.2.0",
    "werkzeug==3.0.3",
]
